--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -104,6 +104,7 @@
   },
   "products": {
     "product": {
+      "muscle_groups": "Muscle groups",
       "social_info_bar_1": "Trusted by",
       "social_info_bar_2": "supporters",
       "measurements": "Measurements",
