--- a/locales/de.json
+++ b/locales/de.json
@@ -180,7 +180,7 @@
       "apply": "Anwenden",
       "clear": "Löschen",
       "clear_all": "Alle entfernen",
-      "from": "Von",
+      "from": "ab",
       "filter_and_sort": "Filtern und sortieren",
       "filter_by_label": "Filter:",
       "filter_button": "Filter",
