--- a/locales/de.json
+++ b/locales/de.json
@@ -107,6 +107,7 @@
       "delivery-hint-inland": "Lieferbar in 1 – 3 Tagen.",
       "delivery-hint-ausland1": "Lieferbar in 2 – 5 Tagen.",
       "delivery-hint-preorder": "Vorbestellbar. Lieferbar am:",
+      "delivery-hint-preorder-woddate": "Vorbestellbar.",
       "delivery-hint-oos": "Nicht auf Lager",
       "add_to_cart": "In den Warenkorb legen",
       "description": "Beschreibung anzeigen",
