--- a/locales/de.json
+++ b/locales/de.json
@@ -106,6 +106,7 @@
   },
   "products": {
     "product": {
+      "pre_order": "Vorbestellen",
       "delivery-hint-inland": "Lieferbar in 1 – 3 Tagen.",
       "delivery-hint-ausland1": "Lieferbar in 2 – 5 Tagen.",
       "delivery-hint-preorder": "Vorbestellbar. Lieferbar am:",
